public/css/main.css
/* ... */
.squeeze-banner h1, .squeeze-banner p {
  color: white;
}
.squeeze-banner h1 {
  margin: 5px;
  font: 64px 'Roboto', sans-serif;
  font-weight: 300;
}
.squeeze-banner p {
  font: 18px 'Roboto', sans-serif;
  font-weight: 400;
}
.form-email {
  margin-bottom: 10px;
}
.email-value, .submit-email {
  text-align: center;
  border-radius: 3px;
  border: 1px solid;
  padding: 5px;
  margin: 0 5px;
}
.email-value {
  font: 16px 'Roboto', sans-serif;
  font-weight: lighter;;
  width: 250px;
  border-color: #e7e7e7;
}

@media only screen and (max-width : 470px) {
  .email-value  {
    margin-bottom: 5px;
  }
}
.submit-email {
  color: black;
  font: 16px 'Roboto', sans-serif;
  font-weight: bold;
  width: 200px;
  border-color: rgba(250, 255, 109, 1);
  background-color: rgba(250, 255, 109, 1);
}

/*
  ========================================
  Navigation
  ========================================
*/

nav {
  text-align: right;
}
/*
  ========================================
  Primary footer
  ========================================
*/

.primary-footer {
  color: rgba(0, 0, 0, 0.43);
  font-size: 14px;
  padding: 20px 0;
  background-color: #f8f8f8;
  border-top: 1px solid #e7e7e7;
  /*position:absolute;
  bottom:0;
  width: 100%;*/
}

.primary-footer small {
  float: left;
  font-weight: 400;
  margin-right: 20px;
}

.logo-social-media {
  max-width: 20px;
}


/*
  ========================================
  Sections
  ========================================
*/

.recipe-item {
  border: 1px solid #F4F4F4;
  border-radius: 3px;
}
.recipe-author, .recipe-author-detailed  {
  display: flex;
  align-items: center;
  margin-bottom: 5px;
}

.round-img {
  border-radius: 50%;
}
.recipe-author-avatar, .recipe-author-avatar-detailed {
  max-height: 35px;
  max-width: 35px;
  height: 100%;
  width: 100%;
  z-index: 2;
  position: relative;
  border: 1px solid rgba(0,0,0,.05);
}
.recipe-author-name, .recipe-author-name-detailed  {
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0.43);
  margin-left: 5px;
}

.recipe-categories h5 {
  float: left;
  margin-right: 10px;
}
.recipe-categories li, .recipe-categories-detailed li, .tags li {
  display:inline-block;
  border: 1px solid #dfe2e5;
  border-radius: 5px;
  padding: 1px 3px;
  margin: 1px;
}

.recipe-categories-detailed li {
  float: right;
}

/*
  ========================================
  DETAILED RECIPE INFORMATION (recipe.html)
  ========================================
*/
/*<<<<<<<<< Card Recipe Detailed (class name) >>>>>>>>>>>*/
.recipe-image-detailed, .recipe-video-preview-detailed {
  width: 100%;
  border-radius: 3px;
}

.card-recipe-inner-detailed {
  text-align: center;
  margin-top: 25px;
}
.recipe-author-detailed  {
  float: left;
}
.recipe-author-name-detailed  {
  margin-right: 5px;
}
.recipe-author-avatar-detailed {
  max-height: 50px;
  max-width: 50px;
}
.recipe-categories-detailed {
  margin-left: 5px;
}
.card-content-detailed, .basic-recipe-information, .recipe-material, .steps {
  border-bottom: 1px dashed #e7e7e7;
  padding: 10px 0 20px 0;
}
.basic-recipe-information {
  padding-bottom: 5px;
  background-color: #f8f8f8;
}
/*<<<<<<<<< Recipe Details (class name) >>>>>>>>>>>*/

  /*Basic Recipe Information (class name)*/

.basic-recipe-information, .recipe-material {
  text-align: center;
}
.basic-recipe-information div {
  display: inline-block;
  margin: 10px 10px 5px 10px;
}

.course-type h5, .length h5, .difficulty h5, .servings h5, .price h5 {
  font-size: 13px;
  font-weight: normal;
}
.course-type p, .length p, .difficulty p, .servings p, .price p {
  color: #888;
  font-size: 18px;
  font-weight: normal;
}
.tags li {
  color: #898989;
  font-size: 8px;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 1.5px;
  background-color: rgba(250, 255, 109, 1);
}
.learning-path, .utensil-name {
  text-transform: capitalize;
}

  /* Recipe Material (class name)*/
.recipe-material, .steps {
  margin: 30px 0;
}
.equipment, .ingredients {
  display:inline-block;
  vertical-align: top;
  margin: 0px 30px;
}
.equipment h5, .ingredients h5, .steps h5, .skills-learnt h5 {
  font-size: 32px;
  font-weight: normal;;
  text-align: left;
  margin-bottom: 15px;
}


@media only screen and (max-width : 475px) {
  .ingredients h5 {
    margin-top: 15px;
  }
}

.utensil-name {
  text-align: center;
  margin-bottom: 8px;
}
.ingredient-wrapper {
  text-align: left;
  margin-left: 20px;
  margin-bottom: 8px;
}
.ingredient-wrapper div {
  display: inline-block;
  font-size: 18px;
}

.ingredient-quantity {
  font-weight: 900;
}

  /*Steps (class name)*/
.steps {
  /*text-align: center;*/
  width: 100%;
  margin:
}

.step h5 {
  font-family: 'Nunito';
  font-size: 36px;
  font-weight: bold;
}
.step h5, .step-description, .skill  {
  text-align: center;
}

.step h5 {
  margin-top: 50px;
  margin-bottom: 20px;
}

.step-picture-holder {
  text-align: center;
}
.skill  {
  text-align: center;
  font-family: 'Nunito';
  font-size: 24px;
  margin: 30px 0;
}
.step-description {
  font-family: 'Nunito', sans-serif;;
  font-size: 18px;
  font-weight: bold;
}

.step-tip {
  font-family: 'Nunito', sans-serif;;
  font-size: 18px;
  font-weight: lighter;
  font-style: italic;
  margin-bottom: 30px;
  text-align: center;

}

.step-picture {
  width: 60%;
  border-radius: 3px;
  max-width: 560px;
}

@media only screen and (max-width : 760px) {
  .step-picture {
    width: 90%;
  }
}

@media only screen and (max-width : 1080px) and (min-width : 759px) {
  .step-picture {
    width: 70%;
  }
}

.step-tip {
  font-size: 14px;
  font-style: italic;
}

